--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "homepage": "https://Joe-Ngan.github.io/my-merng-client",
+  "homepage": "https://my-merng-client.vercel.app/",
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.10",
@@ -26,8 +26,6 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -51,8 +49,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://fathomless-mountain-10479.herokuapp.com/",
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
-  }
+  "proxy": "https://fathomless-mountain-10479.herokuapp.com/"
 }
