--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "5.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
     "web-vitals": "^2.1.4"
