--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "homepage": "https://my-merng-client.vercel.app/",
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.10",
@@ -13,6 +12,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "apollo-link-context": "^1.0.20",
+    "css-select": "^3.1.0",
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
     "jwt-decode": "^3.1.2",
@@ -20,9 +20,9 @@
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
+    "svgo": "^2.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -33,7 +33,8 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app"
+      "react-app",
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -47,6 +48,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@svgr/plugin-svgo": "^6.2.0",
+    "@svgr/webpack": "^6.2.1",
+    "react-scripts": "3.0.1",
+    "terser-webpack-plugin": "^5.3.1"
   },
   "proxy": "https://fathomless-mountain-10479.herokuapp.com/"
 }
